# valin

./: .gitignore  Cargo.toml  justfile  readme.md
.github/workflows/: flatpak.yml  release.yml
flatpak/: io.marc.valin.desktop  io.marc.valin.metainfo.xml  io.marc.valin.yml
src/: app.rs  code_editor.rs  commander.rs  controlled_virtual_scroll_view.rs  editor_manager.rs  file_explorer.rs  file_tab.rs  global_defaults.rs  global_shortcuts.rs  history.rs  icons.rs  keyboard_navigation.rs  languages.rs  lsp.rs  main.rs  manager.rs  metrics.rs  panels.rs  parser.rs  settings.rs  sidebar.rs  sidepanel.rs  state.rs  syntax.rs  tab.rs  text_area.rs  theme.rs  use_debouncer.rs  use_editable.rs  use_metrics.rs  use_syntax_highlighter.rs  utils.rs
src/commands/: font_size.rs  mod.rs  split.rs
src/components/: commander.rs  controlled_virtual_scroll_view.rs  editor_panel.rs  editor_scroll_view.rs  file_explorer.rs  icons.rs  mod.rs  overlay.rs  search.rs  sidebar.rs  sidepanel.rs  status_bar.rs  tab.rs  text_area.rs
src/fs/: interface.rs  local.rs  mod.rs
src/hooks/: mod.rs  use_computed.rs  use_debounce.rs  use_debouncer.rs  use_edit.rs  use_editable.rs  use_lsp_status.rs  use_manager.rs  use_metrics.rs
src/icons/themes/material/: theme.json
src/lsp/: client.rs  mod.rs  use_lsp.rs  utils.rs
src/state/: app.rs  commands.rs  editor.rs  file_icons.rs  keyboard_shortcuts.rs  mod.rs  panels_tabs.rs  settings.rs  views.rs
src/tabs/: code_editor.rs  config.rs  mod.rs  settings.rs  welcome.rs
src/tabs/editor/: commands.rs  editor_data.rs  editor_line.rs  editor_tab.rs  editor_ui.rs  hover_box.rs  lsp.rs  mod.rs  utils.rs
src/tabs/editor/hooks/: mod.rs  use_lsp.rs
src/views/: mod.rs
src/views/commander/: commander_ui.rs  mod.rs
src/views/file_explorer/: file_explorer_state.rs  file_explorer_ui.rs  mod.rs
src/views/file_search/: file_search_ui.rs  mod.rs
src/views/panels/: mod.rs
src/views/panels/tabs/: settings.rs  welcome.rs
src/views/panels/tabs/editor/: commands.rs  editor_data.rs  editor_line.rs  editor_tab.rs  editor_ui.rs  hover_box.rs  mod.rs  utils.rs
src/views/search/: mod.rs  search_ui.rs
src/views/tab_switcher/: mod.rs  tab_switcher_ui.rs
