[package]
name = "valin"
version = "0.0.20"
edition = "2021"

[patch.crates-io]
# dioxus = { git = "https://github.com/marc2332/dioxus", rev = "17b8b22d9b6c31a9ad5a8e291627776fa3c1ec49" }
# dioxus-rsx = { git = "https://github.com/marc2332/dioxus", rev = "17b8b22d9b6c31a9ad5a8e291627776fa3c1ec49" }
# dioxus-core-macro = { git = "https://github.com/marc2332/dioxus", rev = "17b8b22d9b6c31a9ad5a8e291627776fa3c1ec49" }
# dioxus-hooks = { git = "https://github.com/marc2332/dioxus", rev = "17b8b22d9b6c31a9ad5a8e291627776fa3c1ec49" }
# dioxus-signals = { git = "https://github.com/marc2332/dioxus", rev = "17b8b22d9b6c31a9ad5a8e291627776fa3c1ec49" }
# dioxus-core = { git = "https://github.com/marc2332/dioxus", rev = "17b8b22d9b6c31a9ad5a8e291627776fa3c1ec49" }
# dioxus-router = { git = "https://github.com/marc2332/dioxus", rev = "17b8b22d9b6c31a9ad5a8e291627776fa3c1ec49" }
# generational-box  = { git = "https://github.com/marc2332/dioxus", rev = "17b8b22d9b6c31a9ad5a8e291627776fa3c1ec49" }

[dependencies]
freya = { version = "0.3.0-rc.4" }
freya-hooks = { version = "0.3.0-rc.4" }

dioxus-radio = { version = "0.5.1", features = ["tracing"] }
dioxus = { version = "0.6", default-features = false }
dioxus-clipboard = "*"
dioxus-sdk = { version = "*", features = ["timing"] }

tokio = { version = "1.33.0", features = ["fs", "process"]}
winit = "0.30.1"
skia-safe = { version = "0.81.0", features = ["gl", "textlayout", "svg"] }

ropey = "1.6.0"
smallvec = "1.10.0"
uuid = { version =  "1.2.2", features = ["v4"]}
rfd = "0.14.1"
tokio-stream = { version = "0.1.14", features = ["fs"] }
tower = "0.4.13"
lsp-types = "0.94.0"
async-lsp = { git = "https://github.com/marc2332/async-lsp", rev="f885653777e61b97202949120c2b60c318492252" }
futures = "0.3.28"
tokio-util = { version = "0.7.11", features = ["compat"] }
clap = { version = "4.5.4", features = ["derive"]}
async-trait = "0.1.80"
toml = "0.8.12"
serde = "1.0.200"
home = "0.5.9"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
notify = "6.1.1"
dioxus-use-computed = "0.2.0"
fxhash = "0.2.1"
grep = "0.3.2"


[profile.release]
panic = "abort" 
lto = true
codegen-units = 1
strip = true
rpath = false
debug = false
debug-assertions = false
overflow-checks = false
