[package]
name = "valin"
version = "0.26.0"
edition = "2024"

[features]
devtools = ["freya/devtools"]

[dependencies]
freya = { path = "../freya/main/crates/freya", features = [
  "markdown",
  "radio",
] }
freya-clipboard = { path = "../freya/main/crates/freya-clipboard" }
freya-performance-plugin = { path = "../freya/main/crates/freya-performance-plugin" }

skia-safe = { version = "0.91.0", features = ["gl", "textlayout", "svg"] }
async-io = "2.5.0"

ropey = "1.6.0"
smallvec = "1.10.0"
uuid = { version = "1.2.2", features = ["v4"] }
rfd = "0.17.2"
futures-channel = "0.3.31"
futures = "0.3.28"
smol = "2.0.2"
clap = { version = "4.5.4", features = ["derive"] }
async-trait = "0.1.80"
toml = "0.8.12"
serde = "1.0.200"
home = "0.5.9"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
notify = "6.1.1"
rustc-hash = "2.1.1"
grep = "0.3.2"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
rpath = false
debug = false
debug-assertions = false
overflow-checks = false
