[package]
name = "valin"
version = "0.27.0"
edition = "2024"
description = "A code editor built with Freya and Rust"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/marc2332/valin"

[features]
devtools = ["freya/devtools"]

[dependencies]
freya = { version = "0.4.0-rc.13", features = [
  "markdown",
  "radio",
  "code-editor",
] }
freya-performance-plugin = { version = "0.4.0-rc.13" }

async-io = "2.5.0"

ropey = "1.6.0"
smallvec = "1.10.0"
rfd = "0.17.2"
futures-channel = "0.3.31"
futures = "0.3.28"
smol = "2.0.2"
clap = { version = "4.5.4", features = ["derive"] }
async-trait = "0.1.80"
toml = "0.8.12"
serde = "1.0.200"
home = "0.5.9"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
notify = "6.1.1"
rustc-hash = "2.1.1"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
rpath = false
debug = false
debug-assertions = false
overflow-checks = false
